--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@ html { box-sizing: border-box; }
 
 body {
     text-rendering: optimizeLegibility;
+    margin: 0;
+    background-color: #f5f5f5;
 }
+
+
+
 
 /*
  BARVY
@@ -21,3 +26,84 @@ body {
 */
 
 /* ----- zde zacni psat vlastni css ----- */
+
+/* sekce zbozi */
+
+.zbozi {
+    width: 670px;
+    height: 440px;
+    font-family: 'Rubik', sans-serif;
+    display: flex;
+    justify-content: center;
+    margin: 100px;
+}
+    
+
+/* sekce vizual */
+
+.vizual {
+    background-image: linear-gradient(#06d7c1, #50cc49);
+    padding: 30px;
+    border-radius: 5% 0 0 5%;    
+    color: white;
+    min-width: 335px;
+    max-height: 440px;
+
+}
+
+.slogan {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 30px 0 0  ;
+    margin: 0;
+}
+.cena {
+    font-size: 28px;
+    font-weight: 500;
+    text-align: right;
+    line-height: 1.5;
+}
+.zaruka {
+    font-size: 12px;
+    font-weight: 400;
+    text-align: right;
+
+}
+.cena,
+.zaruka {
+    position: relative;
+    bottom: 70px;
+}
+
+.bota {
+position: relative;
+right: 110px;
+top: 10px;
+}
+
+/* sekce detaily */
+
+.detaily {
+    background-color: white;
+    padding: 30px;
+    border-radius: 0 5% 5% 0;
+    min-width: 335px;
+    max-height: 440px;
+}
+
+.nazev {
+font-size: 20px;
+font-weight: 500;
+text-transform: uppercase;
+}
+
+.produkt {
+font-size: 16px;
+font-weight: 400;
+color: #959595;
+}
+
+.popis {
+    font-size: 16px;
+    font-weight: 400;
+}
