--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     margin: 100px auto 0;
     box-shadow: 1px 0 30px #959595;
     max-width: 670px;
+    min-height: 440px;
     border-radius: 5%;
 
 }
@@ -105,44 +106,72 @@ text-transform: uppercase;
 font-size: 16px;
 font-weight: 400;
 color: #959595;
+margin: 15px 15px 0 0;
 }
 
 .popis {
-    font-size: 16px;
+    font-size: 0.9rem;
     font-weight: 400;
     border-bottom: solid 1px #06d7c1;
-    padding: 10px 0 30px;
+    padding: 30px 0 30px;
+    margin: 0;
 }
 
 .velikosti {
     display: flex;
-    padding: 10px;
+    padding: 0;
+    margin: 0;
     justify-content: space-evenly;
+    align-items: center;
+}
+
+h1 {
+    margin: 0;
+}
+h2 {
+    text-transform: uppercase;
+    font-size: 1rem;
+    margin: 30px 30px 30px 0 ;
 }
 
 .velikosti li {
+    display: flex:
     flex: 1 0 5px;
     list-style: none;  
-  
+    max-width: 30px;
+    height: 30px;
+    align-items: center;
+    text-align: center;  
 }
 
-.velikosti li:hover,
-.velikosti li:focus
-.velikosti li:active {
+.velikosti a:hover,
+.velikosti a:active,
+.velikosti a:focus  {
     border: solid 1px #f15f42;
     border-radius: 50px;
     color: #f15f42;
     text-align: center;
+    align-items: center;
     flex: 1 0 5px;
 }
 
+a {
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
+
+
 .akce {
+    display: relative;
     width: 150px;
-    padding: 10px;
+    padding: 15px;
     background-color:#f15f42;
     text-align: center;
     border-radius: 5px;
-
+    margin: 40px 0;
 }
 
 .tlacitko {
@@ -151,4 +180,5 @@ color: #959595;
     text-transform: uppercase;
     align-items: center;
     text-align: center;
+    
 }
